[WIP] feat: mapbox explory

--- a/.env.template
+++ b/.env.template
@@ -2,3 +2,6 @@ S3_ACCESS_KEY_ID=
 S3_SECRET_ACCESS_KEY=
 
 PG_CONNECTION_STRING=
+
+# Mapbox configuration for map features
+VITE_MAPBOX_ACCESS_TOKEN=
