--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,6 +23,7 @@
     "@essentials/request-timeout": "1.3.0",
     "@headlessui/react": "2.2.4",
     "@lobehub/fluent-emoji": "2.0.0",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.3",
     "@radix-ui/react-avatar": "1.1.10",
     "@radix-ui/react-context-menu": "2.2.15",
     "@radix-ui/react-dialog": "1.1.14",
@@ -49,6 +50,7 @@
     "i18next-browser-languagedetector": "8.2.0",
     "immer": "10.1.1",
     "jotai": "2.12.5",
+    "mapbox-gl": "^3.13.0",
     "masonic": "4.1.0",
     "motion": "12.19.1",
     "ofetch": "1.4.1",
@@ -59,6 +61,7 @@
     "react-i18next": "15.5.3",
     "react-image-gallery": "1.4.0",
     "react-intersection-observer": "9.16.0",
+    "react-map-gl": "^8.0.4",
     "react-remove-scroll": "2.7.1",
     "react-router": "7.6.2",
     "react-scan": "0.3.4",
