--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -7,3 +7,11 @@ catalog:
   '@t3-oss/env-core': 0.13.8
   dotenv-expand: 12.0.2
   typescript: 5.8.3
+
+onlyBuiltDependencies:
+  - '@tailwindcss/oxide'
+  - bufferutil
+  - esbuild
+  - sharp
+  - simple-git-hooks
+  - unrs-resolver
