--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,6 +24,7 @@
     "@headlessui/react": "2.2.4",
     "@lobehub/fluent-emoji": "2.0.0",
     "@mapbox/mapbox-gl-geocoder": "^5.0.3",
+    "@maplibre/maplibre-gl-geocoder": "^1.9.0",
     "@radix-ui/react-avatar": "1.1.10",
     "@radix-ui/react-context-menu": "2.2.15",
     "@radix-ui/react-dialog": "1.1.14",
@@ -51,6 +52,7 @@
     "immer": "10.1.1",
     "jotai": "2.12.5",
     "mapbox-gl": "^3.13.0",
+    "maplibre-gl": "^5.6.1",
     "masonic": "4.1.0",
     "motion": "12.19.1",
     "ofetch": "1.4.1",
