--- a/config.example.json
+++ b/config.example.json
@@ -8,5 +8,9 @@
     "name": "Innei",
     "url": "https://innei.in/",
     "avatar": "https://cdn.jsdelivr.net/gh/Innei/static@master/avatar.png"
-  }
+  },
+  "map": [
+    "maplibre",
+    "mapbox"
+  ]
 }
